--- a/css/style.less
+++ b/css/style.less
@@ -7,12 +7,13 @@
 @white: #FEFEFE;
 @black: #343434;
 /**End of Palette**/
+a {font-weight: bold;}
 html {font-size: 62.5%}
 body {
 	font-family: 'Open Sans', sans-serif;
 }
 p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
-.bg:first-child {
+.bg:first-child, .bg.blue {
 	padding: 150px 0;
 	padding: 50vh 0;
 }
@@ -20,12 +21,12 @@ p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
 	padding: 8vh 0;
 	min-height: 100vh;
 }
-.bg.black{background: @black; color: @white}
-.bg.blue {background: @blue; color: @white}
-.bg.purple {background: @purple; color: @white}
-.bg.red {background: @red; color: @white}
-.bg.yellow {background: @yellow; color: @white}
-.bg.green {background: @green; color: @white}
+.bg.black{background: @black; color: @white; .btn-ghost:hover {color: @black !important;}}
+.bg.blue {background: @blue; color: @white; .btn-ghost:hover {color: @blue !important;}}
+.bg.purple {background: @purple; color: @white; .btn-ghost:hover {color: @purple !important;}}
+.bg.red {background: @red; color: @white; .btn-ghost:hover {color: @red !important;}}
+.bg.yellow {background: @yellow; color: @white; .btn-ghost:hover {color: @yellow !important;}}
+.bg.green {background: @green; color: @white; .btn-ghost:hover {color: @green !important;}}
 .btn {
 	border-width: 2px; 
 }
@@ -33,6 +34,14 @@ p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
 	background: none !important;
 	border-color: @white !important;
 	color: @white !important;
+}
+.btn-ghost:hover {
+	background: @white !important; //Todo: FadeIn animation
+	color: @black;
+}
+.logo {
+	margin-top: -128px;
+	padding-bottom: 64px;
 }
 .project-title {
 	padding: 16px 0 32px 0;
