Preparing to launch redesign

--- a/css/style.less
+++ b/css/style.less
@@ -39,6 +39,9 @@ p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
 	background: @white !important; //Todo: FadeIn animation
 	color: @black;
 }
+.footer-link, .footer:hover {
+	color: @white !important;
+}
 .logo {
 	margin-top: -128px;
 	padding-bottom: 64px;
