--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,6 @@
 /**Palette**/
 @blue: #58C2EB;
+@grey-blue: #9CC2CB;
 @purple: #786099;
 @red: #BA2C1C;
 @yellow: #FBBF15;
@@ -7,15 +8,66 @@
 @white: #FEFEFE;
 @black: #343434;
 /**End of Palette**/
+
+
+//== Media queries breakpoints
+//
+//## Define the breakpoints at which your layout will change, adapting to different screen sizes.
+
+// Extra small screen / phone
+//** Deprecated `@screen-xs` as of v3.0.1
+@screen-xs:                  480px;
+//** Deprecated `@screen-xs-min` as of v3.2.0
+@screen-xs-min:              @screen-xs;
+//** Deprecated `@screen-phone` as of v3.0.1
+@screen-phone:               @screen-xs-min;
+
+// Small screen / tablet
+//** Deprecated `@screen-sm` as of v3.0.1
+@screen-sm:                  768px;
+@screen-sm-min:              @screen-sm;
+//** Deprecated `@screen-tablet` as of v3.0.1
+@screen-tablet:              @screen-sm-min;
+
+// Medium screen / desktop
+//** Deprecated `@screen-md` as of v3.0.1
+@screen-md:                  992px;
+@screen-md-min:              @screen-md;
+//** Deprecated `@screen-desktop` as of v3.0.1
+@screen-desktop:             @screen-md-min;
+
+// Large screen / wide desktop
+//** Deprecated `@screen-lg` as of v3.0.1
+@screen-lg:                  1200px;
+@screen-lg-min:              @screen-lg;
+//** Deprecated `@screen-lg-desktop` as of v3.0.1
+@screen-lg-desktop:          @screen-lg-min;
+
+// So media queries don't overlap when required, provide a maximum
+@screen-xs-max:              (@screen-sm-min - 1);
+@screen-sm-max:              (@screen-md-min - 1);
+@screen-md-max:              (@screen-lg-min - 1);
+
+
 a {font-weight: bold;}
 html {font-size: 62.5%}
 body {
 	font-family: 'Open Sans', sans-serif;
 }
-p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
+p, li {
+	font-size: 16px; 
+	font-size: 1.6rem;
+	padding-bottom: 16px;
+	line-height: 32px;
+	line-height: 3.2rem;
+
+}
+
+
+
 .bg:first-child, .bg.blue {
 	padding: 150px 0;
-	padding: 50vh 0;
+	padding: 30vh 0;
 }
 .bg {
 	padding: 8vh 0;
@@ -27,8 +79,11 @@ p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
 .bg.red {background: @red; color: @white; .btn-ghost:hover {color: @red !important;}}
 .bg.yellow {background: @yellow; color: @white; .btn-ghost:hover {color: @yellow !important;}}
 .bg.green {background: @green; color: @white; .btn-ghost:hover {color: @green !important;}}
+.bg.grey-blue {background: @grey-blue; color: @black; .btn-ghost:hover {color: @grey-blue !important;}}
 .btn {
-	border-width: 2px; 
+	border-width: 1px; 
+	border-radius: 0px;
+	text-transform: uppercase;
 }
 .btn-ghost {
 	background: none !important;
@@ -49,4 +104,25 @@ p, li {font-size: 16px; font-size: 1.6rem;padding-bottom: 16px}
 .project-title {
 	padding: 16px 0 32px 0;
 	margin: 0;
+	text-transform: uppercase;
+}
+
+h1.lead {
+
+	margin-bottom: 32px;
+	font-size: 64px;
+	font-size: 6.4rem;
+
+
+	@media screen and (max-width: @screen-xs) {
+	
+		font-size: 32px;
+
+	}
+
+}
+
+h3 {
+
+	text-transform: uppercase;
 }
