Style tweaks and moved new_index.html to index.html

--- a/css/style.less
+++ b/css/style.less
@@ -9,7 +9,6 @@
 @black: #343434;
 /**End of Palette**/
 
-
 //== Media queries breakpoints
 //
 //## Define the breakpoints at which your layout will change, adapting to different screen sizes.
@@ -54,16 +53,14 @@ html {font-size: 62.5%}
 body {
 	font-family: 'Open Sans', sans-serif;
 }
+footer {padding: 150px 0; padding: 30vh 0 !important;}
 p, li {
 	font-size: 16px; 
 	font-size: 1.6rem;
 	padding-bottom: 16px;
 	line-height: 32px;
 	line-height: 3.2rem;
-
 }
-
-
 
 .bg:first-child, .bg.blue {
 	padding: 150px 0;
@@ -108,21 +105,13 @@ p, li {
 }
 
 h1.lead {
-
 	margin-bottom: 32px;
-	font-size: 64px;
-	font-size: 6.4rem;
-
-
+	font-size: 64px; font-size: 6.4rem;
 	@media screen and (max-width: @screen-xs) {
-	
-		font-size: 32px;
-
+		font-size: 32px; font-size: 3.2rem;
 	}
-
 }
 
 h3 {
-
 	text-transform: uppercase;
 }
