--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,10 @@
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
 
 @import "variables";
 
-@import "../node_modules/bootstrap/scss/bootstrap";
-@import "../node_modules/font-awesome/scss/font-awesome";
-@import "../node_modules/wowjs/css/libs/animate";
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/font-awesome/scss/font-awesome";
+@import "../../node_modules/wowjs/css/libs/animate";
 .wow {visibility:hidden;}
